# rest-api-with-flask-restx

./: README.md  pyproject.toml
app/: __init__.py  api_models.py  extensions.py  models.py  resource.py
