[tool.poetry]
name = "rest-api-with-flask-restx"
version = "0.1.0"
description = ""
authors = ["kirill0720 <knete-87@mail.ru>"]
readme = "README.md"
packages = [{include = "rest_api_with_flask_restx"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
flask-restx = "^1.1.0"
flask-sqlalchemy = "^3.0.5"
python-dotenv = "^1.0.0"
flask-jwt-extended = "^4.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
